--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,11 +25,13 @@
     "ipfs-http-client": "^56.0.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^4.3.1",
     "react-pdf": "^5.7.2",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toggle-dark-mode": "^1.1.1",
     "react-type-animation": "^1.1.3",
     "sweetalert2": "^11.4.9",
     "sweetalert2-react-content": "^5.0.0",
@@ -64,11 +66,14 @@
   },
   "devDependencies": {
     "@types/jquery": "^3.5.14",
+    "@types/react-google-recaptcha": "^2.1.9",
+    "@types/react-modal": "^3.16.3",
     "@types/react-pdf": "^5.7.0",
     "@types/react-slick": "^0.23.8",
     "@types/three": "^0.139.0",
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
+    "react-toastify": "^10.0.5",
     "tailwindcss": "^3.0.24"
   }
 }
